--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "easy-monitor": "^2.2.1",
     "ejs": "^2.5.6",
     "express": "^4.14.0",
