--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "telegram-bot-9m",
   "version": "0.1.0",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node syncDB.js & node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -17,7 +17,9 @@
     "morgan": "^1.9.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.1",
-    "serve-favicon": "~2.3.0"
+    "sequelize": "^4.42.0",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
